# Gitph

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: ci.yml  cmake-multi-platform.yml
native_modules/git_optim/: CMakeLists.txt
native_modules/git_optim/src/: optim.cpp  optim.h
scripts/install/: install.ps1  install.sh
src/: cli.rs  config.rs  main.rs
src/api_client/: github.rs  mod.rs
src/git_wrapper/: branch.rs  clone.rs  commit.rs  mod.rs  push.rs  remote.rs  status.rs  tag.rs
src/ui/: menus.rs  mod.rs  prompts.rs
