# ==============================================================================
# Manifesto do Projeto 'gitph' para o Cargo
#
# Este arquivo (em formato TOML) é o coração da configuração de qualquer
# projeto Rust. Ele define metadados, dependências e perfis de compilação.
# ==============================================================================

[package]
# --- Metadados Essenciais do Pacote ---
name    = "gitph"
version = "0.1.0"
authors = ["Pedro h.Garcia <phgarcia2008@Icloud.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = """
Um assistente de linha de comando moderno e interativo para otimizar
fluxos de trabalho com Git, GitHub e GitLab.
"""
repository = "https://github.com/phkaiser13/gitph"
readme = "README.md"

# ==============================================================================
# Dependências da Aplicação Principal
# ==============================================================================
[dependencies]
# --- Para a Interface de Linha de Comando (CLI) e UI no Terminal ---
# `clap` é o padrão de fato para parsing de argumentos de linha de comando.
# Usaremos o feature "derive" para uma definição declarativa e fácil.
clap = { version = "4.4", features = ["derive"] }

# `dialoguer` fornece menus interativos, prompts de texto, seleções, etc.
# Essencial para a experiência de "painel" que queremos criar.
dialoguer = "0.11"

# `console` oferece utilitários de baixo nível para o terminal, como
# controle de cores e formatação de texto.
console = "0.15"

# `indicatif` é excelente para exibir spinners e barras de progresso,
# dando feedback visual ao usuário durante operações longas (clone, push).
indicatif = "0.17"


# --- Para Chamadas de API (GitHub/GitLab) e Processamento de Dados ---
# `reqwest` é um cliente HTTP ergonômico e poderoso para fazer chamadas de API.
# Adicionamos o feature "blocking" para usar o cliente síncrono, evitando
# a necessidade de um runtime async (como Tokio) para nossa CLI.
reqwest = { version = "0.11", features = ["json", "blocking"] }

# `serde` é o framework padrão para serialização e desserialização de dados
# em Rust. Usaremos para converter respostas JSON das APIs em structs Rust.
serde = { version = "1.0", features = ["derive"] }

# `toml` fornece a capacidade de analisar (parse) e serializar dados n  o
# formato TOML, que é ideal para arquivos de configuração legíveis por humanos.
toml = "0.8"

# `directories` nos ajuda a encontrar caminhos de diretórios padrão
# (como o de configuração ou de cache) de forma consistente em diferentes
# sistemas operacionais (Windows, macOS, Linux).
directories = "5.0"

# --- Para Melhor Tratamento de Erros ---
# `anyhow` simplifica o tratamento de erros em aplicações, fornecendo um
# tipo de erro único e fácil de usar que pode encapsular qualquer erro.
anyhow = "1.0"


# ==============================================================================
# Dependências Específicas para o Script de Build (build.rs)
# ==============================================================================
# Estas dependências NÃO são incluídas no binário final. Elas são usadas
# apenas para executar nosso script `build.rs` antes da compilação principal.
[build-dependencies]
# O crate `cmake` nos permite encontrar e invocar o CMake para compilar
# nosso módulo C++ de forma programática a partir do Rust.
cmake = "0.1"


# ==============================================================================
# Perfis de Compilação
# ==============================================================================
# Aqui podemos otimizar o binário final para o lançamento.
[profile.release]
opt-level = 3          # Nível máximo de otimização.
lto = true             # Ativa Link-Time Optimization para melhor performance/tamanho.
codegen-units = 1      # Maximiza oportunidades de otimização ao custo de tempo de compilação.
panic = "abort"        # Aborta em vez de desenrolar a pilha em um pânico, reduzindo o tamanho.
strip = true           # Remove símbolos de debug do binário final, reduzindo drasticamente o tamanho.